Make sure WebRTC Internals dump checkboxes are marked on load if recording is ongoing.

Bug: 750656
Change-Id: Ic745e8346a17fc18224a8fb481215d06a4935e87